Changes in version 0.2.0.29 - 2008-06-13
  o Minor bugfixes:
    - Fix a macro/CPP interactions that was confusing some compilers.
      


Changes in version 0.2.0.28-rc - 2008-06-13
  o Anonymity fixes:
    - Fix a bug where, when we were choosing the 'end stream reason' to
      put in our relay end cell that we send to the exit relay, Tor
      clients on Windows were sometimes sending the wrong 'reason'. The
      anonymity problem is that exit relays may be able to guess whether
      the client is running Windows, thus helping partition the anonymity
      set. Down the road we should stop sending reasons to exit relays,
      or otherwise prevent future versions of this bug.

  o Major bugfixes:
    - While setting up a hidden service, some valid introduction circuits
      were overlooked and abandoned. This might be the reason for
      the long delay in making a hidden service available. Bugfix on
      0.2.0.13-alpha.

  o Minor features:
    - Update to the "June 9 2008" ip-to-country file.
    - Run 'make test' as part of 'make dist', so we stop releasing so
      many development snapshots that fail their unit tests.

  o Minor bugfixes:
    - When we're checking if we have enough dir info for each relay
      to begin establishing circuits, make sure that we actually have
      the descriptor listed in the consensus, not just any descriptor.
    - Bridge relays no longer print "xx=0" in their extrainfo document
      for every single country code in the geoip db.
    - Only warn when we fail to load the geoip file if we were planning to
      include geoip stats in our extrainfo document.
    - If we change our MaxAdvertisedBandwidth and then reload torrc,
      Tor won't realize it should publish a new relay descriptor. Fixes
      bug 688, reported by mfr.
    - When we haven't had any application requests lately, don't bother
      logging that we have expired a bunch of descriptors.